fixed alignment on mobile

--- a/src/components/CurrentUser.scss
+++ b/src/components/CurrentUser.scss
@@ -1,8 +1,9 @@
 .CurrentUser {
+  width: 100%;
 }
 
 .TeamSelection {
-  width: 420px;
+  width: 370px;
   display: block;
   margin: auto;
 }
