--- a/src/components/Player.scss
+++ b/src/components/Player.scss
@@ -2,7 +2,7 @@
   background-color: #B80002;
   color: white;
   display: inline-block;
-  width: 150px;
+  width: 130px;
   padding: 5px;
   border-radius: 10%;
   font-size: 12px;
